# renderdoc

./: .gitignore  CMakeLists.txt  README.md
android-build/: make_android.bat
android-build/renderdoc/driver/gl/rdoc_gl.dir/RelWithDebInfo/rdoc_gl.tlog/: arm-linux-androideabi-ar.command.1.tlog  (+2 more)
android-build/renderdoc/renderdoc.dir/RelWithDebInfo/renderdoc.tlog/: arm-linux-androideabi-g++-collect2.read.1.tlog  arm-linux-androideabi-g++-collect2.write.1.tlog  arm-linux-androideabi-g++.read.1.tlog  arm-linux-androideabi-g++.write.1.tlog
android-build/renderdoccmd/renderdoccmd.dir/RelWithDebInfo/renderdoccmd.tlog/: arm-linux-androideabi-g++-collect2.read.1.tlog  arm-linux-androideabi-g++-collect2.write.1.tlog  arm-linux-androideabi-g++.write.1.tlog
renderdoc/: CMakeLists.txt
renderdoc/api/replay/: renderdoc_replay.h
renderdoc/core/: core.cpp  core.h  replay_proxy.cpp
renderdoc/driver/dxgi/: dxgi_common.cpp
renderdoc/driver/gl/: CMakeLists.txt  gl_common.cpp  gl_counters.cpp  gl_debug.cpp  gl_driver.cpp  gl_driver.h  gl_hooks_egl.cpp  gl_hooks_vrapi.cpp  gl_manager.cpp  gl_renderstate.cpp  gl_replay.cpp  gl_replay_egl.cpp  gl_resources.cpp  gl_resources.h
renderdoc/driver/gl/wrappers/: gl_emulated.cpp
renderdoc/driver/vrapi/: CMakeLists.txt  vrapi_driver.cpp  vrapi_driver.h  vrapi_hooks.cpp  vrapi_replay.cpp
renderdoc/os/posix/android/: android_process.cpp
renderdoccmd/: CMakeLists.txt  renderdoccmd_android.cpp
renderdoccmd/android/: AndroidManifest.xml
renderdoccmd/android/src/org/renderdoc/renderdoccmd/: Loader.java
(+3 files in other folders)
